--- a/.github/workflows/test3.yml
+++ b/.github/workflows/test3.yml
@@ -11,7 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        os: [centos:8, ubuntu:22.04, debian:bullseye]
+        os: 
+          - "centos:8"
+          - "ubuntu:22.04"
+          - "debian:bullseye"
     steps:
       # Завантажуємо репозиторій
       - name: Checkout code
